--- a/projetos-teste/praticas-simples/pratica-1.html
+++ b/projetos-teste/praticas-simples/pratica-1.html
@@ -4,42 +4,15 @@
 <head>
     <meta charset="UFT-8">
     <title>Meus Estudos</title>
-    <style>
-        body {
-            background-image: url("https://t3.ftcdn.net/jpg/11/14/79/10/360_F_1114791057_0ykjBalhzltiH5qCSKdTEONboYZbaENE.jpg");
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-
-        .cartao {
-            flex-direction: column;
-            display: flex;
-            border: 1px;
-            border-radius: 10px;
-            background-color: rgb(245, 245, 245, 0.6);
-            padding: 20px;
-            width: 500px;
-        }
-
-        .h1 {
-            display: flex;
-            flex-direction: column;
-            text-align: center;
-            justify-content: center;
-        }
-
-        .container {
-            display: flex;
-            text-align: left;
-            justify-content: left;
-
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <header>
+        <h1>Teste</h1>
+    </header>
     <div class="cartao">
-        <div class="h1">
+        <div class="divh1">
             <h1>Meus Estudos</h1>
             <hr />
             <div class="container">
